feat: use artifactory storage api